...
            Get Started
          </Button>
          <Button
            mode="text"
            onPress={handleLoginPress}
            style={styles.loginButton}
            testID="welcome-back-to-login-button"
          >
            Already have an account? Log in
          </Button>
        </View>
      </ScrollView>
    </SafeAreaView>
...
